--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,11 @@
 Changelog
 =========
 
+1.1.0 (2010-xx-xx)
+------------------
+
+  * Added exception classes
+
 1.0.0 (2010-12-06)
 ------------------
 
