--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,11 @@
 Changelog
 =========
 
+1.0.0 (2012-08-10)
+------------------
+
+  * First stable release
+
 0.9.3 (2012-03-06)
 ------------------
 
