--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,11 @@
 Changelog
 =========
 
+1.0.1 (2012-12-05)
+------------------
+
+  * Added support for "%s" in bundle name replaced by hash (@blueyed)
+
 1.0.0 (2012-08-10)
 ------------------
 
